syntax = "proto3";

option java_package = "hmda.persistence.serialization";
option optimize_for = SPEED;

import "submission.proto";
import "validation.proto";

message TrackProgressMessage {
    string replyTo = 1;
}

message StartUploadMessage {
    SubmissionIdMessage submissionId = 1;
}

message CompleteUploadMessage {
    SubmissionIdMessage submissionId = 1;
}

message StartParsingMessage {
    SubmissionIdMessage submissionId = 1;
}

message FieldParserErrorMessage {
    string fieldName = 1;
    string inputValue = 2;
}

message PersistHmdaRowParsedErrorMessage {
    int32 rowNumber = 1;
    string estimatedULI = 4;
    repeated FieldParserErrorMessage fieldErrors = 2;
    string maybeReplyTo = 3;
}

message PersistHmdaRowValidatedErrorMessage {
    SubmissionIdMessage submissionId = 1;
    int32 rowNumber = 2;
    repeated ValidationErrorMessage validationErrors = 3;
    string replyTo = 4;
}

message PersistMacroErrorMessage {
    SubmissionIdMessage submissionId = 1;
    ValidationErrorMessage validationError = 2;
    string maybeReplyTo = 3;
}

message GetParsedWithErrorCountMessage {
    string replyTo = 1;
}

message GetParsingErrorsMessage {
    int32 page = 1;
    string replyTo = 2;
}

message CompleteParsingMessage {
    SubmissionIdMessage submissionId = 1;
}

message CompleteParsingWithErrorsMessage {
    SubmissionIdMessage submissionId = 1;
}

message StartSyntacticalValidityMessage {
    SubmissionIdMessage submissionId = 1;
}

message GetHmdaValidationErrorStateMessage {
    SubmissionIdMessage submissionId = 1;
    string replyTo = 2;
}

message CompleteSyntacticalValidityMessage {
    SubmissionIdMessage submissionId = 1;
}

message StartQualityMessage {
    SubmissionIdMessage submissionId = 1;
}

message StartMacroMessage {
    SubmissionIdMessage submissionId = 1;
}

message CompleteQualityMessage {
    SubmissionIdMessage submissionId = 1;
}

message CompleteMacroMessage {
    SubmissionIdMessage submissionId = 1;
}

message VerifyQualityMessage {
    SubmissionIdMessage submissionId = 1;
    bool verified = 2;
    string replyTo = 3;
}

message VerifyMacroMessage {
    SubmissionIdMessage submissionId = 1;
    bool verified = 2;
    string replyTo = 3;
}

message SignSubmissionMessage {
    SubmissionIdMessage submissionId = 1;
    string replyTo = 2;
    string email = 3;
    string signerUsername = 4;
}

message GetVerificationStatusMessage {
    string replyTo = 1;
}

